# ting-reveng

./: .gitignore  EnumerateSelection.py  README.md  gen-ps.bat  ghcid.txt  profile-build.bat  stack.yaml  ting.cabal
analysis/: OIDCode.md  analysis.md  runme.bat
analysis/010Editor/: analyseScripts.1sc  analyseScripts.py  common.1sc  defines.py  disasmScripts.1sc  disasmScripts.py  extractResources.py  gatherScriptStats.1sc  gatherScriptStats.py  mergeCSV.py  mergeDisasm.py  ouf.bt  parseOufFiles.1sc  parseOufFiles.py  s-ouf.bt  s-types.bt  s.bt
analysis/extracted/: analyseScripts.csv  analyseScripts_0x14_RETURN_0x15_CALLID.csv  analyseScripts_0x15_CALLID.csv  knownBooks.csv  knownBooks_scriptStats.csv
analysis/hardware/: hardware.md
analysis/hardware/Ting_v1.3/: Thumbs.db
analysis/system.ting.eu/: known_books_2016-05-04.txt  synch-system.ting.eu.py
app/calculator/: calculator.cabal
app/calculator/print/: marijana_cmy-k.eps  resources.txt
app/calculator/src/: Main.hs
app/compiler/: compiler.cabal
app/compiler/src/: Main.hs
app/emulator/: emulator.cabal
app/emulator/src/: Main.hs
app/test/: test.cabal
app/test/src/: Spec.hs
apps/calculator/: Main.hs
apps/compiler/: Main.hs
apps/generic/: Main.hs
books/: Bullhit.yaml  Dr Seuss_ABC_Narrated by Rik Mayall_Label Track.txt  Dr. Seuss Beginner Book Video - The Cat In The Hat and Maybe you Should Be a Vet! (Part 1)_Label Track.txt  Dr. Seuss Beginner Book Video - The Cat In The Hat and Maybe you Should Be a Vet! (Part 2)_Label Track.txt  Dr.Seuss_ABC.yaml  DrSeuss_The Cat in the Hat.yaml  Frederick Noad_Solo Guitar Playing 1.yaml  Glazbena petica_TextBook.yaml  New_Building_Blocks_1_TextBook.yaml  New_Building_Blocks_1_WorkBook.yaml  New_Building_Blocks_2_TextBook.yaml  New_Building_Blocks_2_WorkBook.yaml  New_Building_Blocks_3_TextBook.yaml  New_Building_Blocks_3_WorkBook.yaml  Razigrani_Zvuci_1_TextBook_Pjevajmo.yaml  Razigrani_Zvuci_1_TextBook_Slušajmo.yaml  Razigrani_Zvuci_2_TextBook_Slušajmo.yaml  Razigrani_Zvuci_3_TextBook_Pjevajmo.yaml  Razigrani_Zvuci_3_TextBook_Slušajmo.yaml  Wir+2_TextBook.yaml
books/08001/: 08001_en.map  08001_en.ouf  08001_en.txt
books/08011/: 08011_en.txt
books/08200/: 08200_en.map  08200_en.txt
books/08201/: 08201_en.map  08201_en.txt
books/08202/: 08202_en.map  08202_en.txt
books/08203/: 08203_en.map  08203_en.txt
books/08204/: 08204_en.map  08204_en.txt
books/08205/: 08205_en.map  08205_en.txt
books/08206/: 08206_en.map  08206_en.txt
books/08207/: 08207_en.map  08207_en.txt
books/08208/: 08208_en.map  08208_en.txt
books/08209/: 08209_en.map  08209_en.txt
books/08214/: 08214_en.map  08214_en.txt
books/08215/: 08215_en.map  08215_en.txt
books/08216/: 08216_en.map  08216_en.txt
books/08217/: 08217_en.map  08217_en.txt
console/: console.cabal
lib/console/: console.cabal
lib/console/src/: IOUtil.hs
lib/console/src/System/IO/Console/: IOUtil.hs
lib/ting/: ting.cabal
lib/ting/src/Ting/: Assembler.hs  Assembler2.hs  BookConfig.hs  Instructions.hs  Linker.hs  OUFWriter.hs  Operand.hs  Registers.hs  Test.hs
postscript/: drawCalculator.bat  drawCalculator.ps  generate-oid.bat  generateContactSheet.bat  generateContactSheet.ps  generateOid.ps  glazbenaPetica.bat  glazbenaPetica.ps  mikula-slika.ps  ps2pdf-oid.opt  showEps.ps
postscript/Resource/: anastigmatix-bindump.ps
postscript/Resource/Category/: net.anastigmatix.filter  net.anastigmatix.filter.ps
postscript/Resource/ProcSet/: net.anastigmatix.BinaryIO  net.anastigmatix.BinaryIO.ps  net.anastigmatix.Import  net.anastigmatix.Import.ps  net.anastigmatix.Markup  net.anastigmatix.Markup.ps  net.anastigmatix.MetaPre  net.anastigmatix.MetaPre.ps  net.anastigmatix.Order  net.anastigmatix.Order.ps  net.anastigmatix.Packager  net.anastigmatix.Packager.ps  net.anastigmatix.StreamIO  net.anastigmatix.StreamIO.ps
postscript/Resource/net.anastigmatix.filter/: DSCDataEncode  DSCDataEncode.ps  DSCDecode  DSCDecode.ps  InUPathDecode  InUPathDecode.ps  WSMarkEncode  WSMarkEncode.ps
postscript/include/: map_oid_tingId.txt  map_tingId_oid.ps  map_tingId_oid.txt  misc.ps  tingId-oid-translation.py  tingOid.ps
resources/: click-ting-logo_cmy-k.eps  fast-divide-multiply.txt
sounds/: convert-mp3.bat
src/Ting/: Assembler.hs  Assembler2.hs  Common.hs  Emulator.hs  Linker.hs  Repl.hs  Trace.hs
test/: Spec.hs
