name:                calculator
version:             0.1.0.0
synopsis:            Paper Calculator
description:         Paper calculator with different speakers
homepage:            https://github.com/glaukon-ariston/ting-reveng#readme
license:             BSD3
license-file:        LICENSE
author:              Glaukon Ariston
maintainer:          glaukon_ariston(at)gmail_com
copyright:           2016 Glaukon Ariston
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ting-calc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, console, ting
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/glaukon-ariston/ting-reveng
