name:                compiler
version:             0.1.0.0
synopsis:            Compiles a Ting book out of mp3 files.
description:         Compiles a Ting book out of mp3 files.
homepage:            https://github.com/glaukon-ariston/ting-reveng#readme
license:             BSD3
license-file:        LICENSE
author:              Glaukon Ariston
maintainer:          glaukon_ariston(at)gmail_com
copyright:           2016 Glaukon Ariston
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ting-compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, console, ting, filepath, directory, formatting
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/glaukon-ariston/ting-reveng
