name:                emulator
version:             0.1.0.0
synopsis:            Emulates Ting book execution.
description:         Emulates Ting book execution
homepage:            https://github.com/glaukon-ariston/ting-reveng#readme
license:             BSD3
license-file:        LICENSE
author:              Glaukon Ariston
maintainer:          glaukon_ariston(at)gmail_com
copyright:           2016 Glaukon Ariston
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ting-emu
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options:         -threaded
  --   -Wall 
  -- -Wincomplete-patterns -Wincomplete-record-updates 
  --  -fwarn-incomplete-patterns -fwarn-incomplete-record-updates
  --  -O2
  --  -fprof-auto
  --  -rtsopts 
  --  -- -with-rtsopts=-N
  --  -- "-with-rtsopts=-M128M -s -h -p -i0.1"
  --  "-with-rtsopts=-M128M -s -h -i0.1"
  --  -- -fforce-recomp
  --  -- -ddump-simpl -dsuppress-all -p
  build-depends:       base, console, ting
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/glaukon-ariston/ting-reveng
