name:                ting
version:             0.1.0.0
synopsis:            Ting pen development framework as an eDSL in Haskell
description:         Ting pen development framework as an eDSL in Haskell
homepage:            https://github.com/glaukon-ariston/ting-reveng#readme
license:             BSD3
license-file:        LICENSE
author:              Glaukon Ariston
maintainer:          glaukon_ariston(at)gmail_com
copyright:           2016 Glaukon Ariston
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ting.Assembler2
                       , Ting.Emulator
                       , Ting.Instructions
                       , Ting.Linker
                       , Ting.Operand
                       , Ting.Registers
                       , Ting.Repl
                       , Ting.Test
                       , Ting.Common
                       , Ting.BookConfig
                       , Ting.OUFWriter
  other-modules:       Ting.Assembler
  build-depends:       base >= 4.7 && < 5, console
                     , split, cryptonite, filepath, directory
                     , bytestring, text, mtl, containers, vector, time, binary
                     , yaml
                     -- , template-haskell, split, vector, cryptonite, filepath, directory, time, binary, MissingH, mtl, bytestring, containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/glaukon-ariston/ting-reveng
